--- a/src/app/console/login/login.component.html
+++ b/src/app/console/login/login.component.html
@@ -35,7 +35,7 @@
           <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-7">
-              <div class="txt-purple">Forgot your Password?</div>
+              <div class="txt-purple" (click)="forgotPassword()">Forgot your Password?</div>
             </div>
           </div>
           <div class="row">
