--- a/src/app/work-space/work-space-initial-requirement/work-space-initial-requirement.component.html
+++ b/src/app/work-space/work-space-initial-requirement/work-space-initial-requirement.component.html
@@ -78,9 +78,12 @@
 
 
                         <div class="row section-spacing">
-                            <div class="col-sm-12">
+                            <div class="col-sm-5">
                                 <div class="page-sub-heading">Recommended Style Guides</div>
                             </div>
+                            <div class="col-sm-5 pt-20">
+                                <button class="btn button-save" (click)="suggestStyleGuide()">Suggested Style Guides</button>
+                            </div> 
                         </div>
 
 
