--- a/src/app/console/header-panel/header-panel.component.html
+++ b/src/app/console/header-panel/header-panel.component.html
@@ -7,7 +7,7 @@
 
        
         <div class="topbar-divider d-none d-sm-block"></div>
-
+ 
         <!-- Nav Item - User Information -->
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="" id="userDropdown" role="button" data-toggle="dropdown"
@@ -30,11 +30,16 @@
                     <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                     Activity Log
                 </a>
-                -->
+                --> 
                 <a *ngIf="commonService.getRole() =='idea-owner'" class="dropdown-item" (click)="subscription()">
                     <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                     Subscription
                 </a>
+            <div class="dropdown-divider"></div>
+            <a (click)="changePassword()" class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                Change Password
+            </a>
                 <div class="dropdown-divider"></div>
                 <a routerLink="/"  class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
