--- a/src/app/work-space/workspace-ai-integration/workspace-ai-integration.component.html
+++ b/src/app/work-space/workspace-ai-integration/workspace-ai-integration.component.html
@@ -1,1 +1,167 @@
-<p>workspace-ai-integration works!</p>
+<main class="mr-15">
+    <div id="Tab1" class="tabcontent">
+        <div class="tab-header">
+                    <div class="row">
+                        <div class="col-sm-9">
+                            <div class="page-heading mt-0">Initial Requirements <img src="assets/images/right-arrow.svg" height="17"> Select Style Guide</div>
+                        </div>
+                        <div class="col-sm-3 align-right">
+                            <button class="btn button-save">Initial Requirements</button>
+                        </div> 
+                    </div>
+                    <form>
+    
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-sm-2">
+                                <label class="control-label">Identified Keywords<sup>*</sup></label>
+                                </div>
+                                <div class="col-sm-5">
+                                    <textarea type="text" placeholder="" rows="3" class="txt-outline bg-white w-100"></textarea>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col-sm-2">
+                                    <label class="control-label">Associated Categories<sup>*</sup></label>
+                                    </div>
+                                    <div class="col-sm-5">
+                                        <textarea type="text" placeholder="" rows="3" class="txt-outline bg-white w-100"></textarea>
+                                    </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-sm-2">
+                                        <label class="control-label">Add your Keywords/Categogories<sup>*</sup></label>
+                                        </div>
+                                        <div class="col-sm-5">
+                                            <textarea type="text" placeholder="" rows="3" class="txt-outline bg-white w-100"></textarea>
+                                        </div>
+                                        </div>
+                                    </div>
+                        <div class="form-group">
+                             <div class="row"> 
+                                <div class="col-sm-2"></div>  
+                                <div class="col-sm-5 pt-20">
+                                    <button class="btn button-save">Suggest Style</button>
+                                </div>                                                       
+                            </div>
+    
+    
+                            <div class="row section-spacing">
+                                <div class="col-sm-12">
+                                    <div class="page-sub-heading">Based on your Requirements</div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
+                                        <img src="assets/images/style-guide.jpg">
+                                    </div>
+                                    <label class="custom-chkbox">
+                                        <input type="checkbox">
+                                        <span class="checkmark"></span>
+                                      </label>
+                                      
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
+                                        <img src="assets/images/style-guide.jpg">
+                                    </div>
+                                    <label class="custom-chkbox">
+                                        <input type="checkbox">
+                                        <span class="checkmark"></span>
+                                      </label>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
+                                        <img src="assets/images/style-guide.jpg">
+                                    </div>
+                                    <label class="custom-chkbox">
+                                        <input type="checkbox">
+                                        <span class="checkmark"></span>
+                                      </label>
+                                </div>
+                            </div>
+                            <div class="row section-spacing">
+                                <div class="col-sm-12">
+                                    <div class="page-sub-heading">Based on your URL Choice </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
+                                        <img src="assets/images/style-guide.jpg">
+                                    </div>
+                                    <label class="custom-chkbox">
+                                        <input type="checkbox">
+                                        <span class="checkmark"></span>
+                                      </label>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
+                                        <img src="assets/images/style-guide.jpg">
+                                    </div>
+                                    <label class="custom-chkbox">
+                                        <input type="checkbox">
+                                        <span class="checkmark"></span>
+                                      </label>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
+                                        <img src="assets/images/style-guide.jpg">
+                                    </div>
+                                    <label class="custom-chkbox">
+                                        <input type="checkbox">
+                                        <span class="checkmark"></span>
+                                      </label>
+                                </div> 
+                            </div>
+                            <div class="row section-spacing">
+                                <div class="col-sm-12">
+                                    <div class="page-sub-heading">Already used by you</div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
+                                        <img src="assets/images/style-guide.jpg">
+                                    </div>
+                                    <label class="custom-chkbox">
+                                        <input type="checkbox">
+                                        <span class="checkmark"></span>
+                                      </label>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
+                                        <img src="assets/images/style-guide.jpg">
+                                    </div>
+                                    <label class="custom-chkbox">
+                                        <input type="checkbox">
+                                        <span class="checkmark"></span>
+                                      </label>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
+                                        <img src="assets/images/style-guide.jpg">
+                                    </div>
+                                    <label class="custom-chkbox">
+                                        <input type="checkbox">
+                                        <span class="checkmark"></span>
+                                      </label>
+                                </div>
+                            </div>
+                            <div class="row section-spacing">
+                                <div class="col-sm-12 pt-10">
+                                    <button class="btn button-save">Save Selected Styles</button>
+                                </div>
+                            </div>  
+                        </div>
+                    </form>
+    
+    
+            </div>
+    </div>
+    </main>
+    
+    <footer>
+        <div class="container-fluid">
+            <div class="footer">©HiveZen.All rights reserved</div>
+        </div>
+    </footer>
