--- a/src/app/subscription/manage-subscription/manage-subscription.component.html
+++ b/src/app/subscription/manage-subscription/manage-subscription.component.html
@@ -16,9 +16,15 @@
                 <p class="ft-12 ft-light-gray pb-2">Current Plan</p>
                 <h5 class="ft-18 ft-color-green">{{planType}}</h5>
               </div>
+              <!--
               <div class="col-sm-3 pr-4 border-left">
                 <p>Seats</p>
                 <h5 class="ft-16 ft-bold pt-2">{{totalLicense}}</h5>
+              </div>
+              -->
+              <div class="col-sm-3 pr-4 border-left">
+                <p>Remaining Days</p>
+                <h5 class="ft-16 ft-bold pt-2">{{noOfDaysToSubscriptionElapse}}</h5>
               </div>
             </div>
             <div class="row mt-5">
