--- a/src/app/subscription/manage-subscription/manage-subscription.component.html
+++ b/src/app/subscription/manage-subscription/manage-subscription.component.html
@@ -29,7 +29,7 @@
             </div>
             <div class="row mt-5">
               <div class="col-sm-9">
-                <p class="ft-12 ft-light-gray pb-2">You are on the basic plan with 5 seats. You can buy more seats at
+                <p class="ft-12 ft-light-gray pb-2">You are on the {{planType}} plan with {{totalLicense}} seats. You can buy more seats at
                   any point of time.</p>
               </div>
               <div class="col-sm-3 p-0">
