--- a/src/app/work-space/workspace-ai-integration/workspace-ai-integration.component.html
+++ b/src/app/work-space/workspace-ai-integration/workspace-ai-integration.component.html
@@ -57,30 +57,38 @@
                                 <div class="col-sm-4">
                                     <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
                                         <img src="assets/images/style-guide.jpg">
+                                        <label class="custom-chkbox">
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                          </label>
                                     </div>
-                                    <label class="custom-chkbox">
-                                        <input type="checkbox">
-                                        <span class="checkmark"></span>
-                                      </label>
-                                      
+                                   <div class="align-center">
+                                      <button class="btn button-save mr-7 mt-20">Preview</button>
+                                    </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
                                         <img src="assets/images/style-guide.jpg">
+                                        <label class="custom-chkbox">
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                          </label>
                                     </div>
-                                    <label class="custom-chkbox">
-                                        <input type="checkbox">
-                                        <span class="checkmark"></span>
-                                      </label>
+                                   <div class="align-center">
+                                      <button class="btn button-save mr-7 mt-20">Preview</button>
+                                    </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
                                         <img src="assets/images/style-guide.jpg">
+                                        <label class="custom-chkbox">
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                          </label>
                                     </div>
-                                    <label class="custom-chkbox">
-                                        <input type="checkbox">
-                                        <span class="checkmark"></span>
-                                      </label>
+                                   <div class="align-center">
+                                      <button class="btn button-save mr-7 mt-20">Preview</button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row section-spacing">
@@ -90,30 +98,39 @@
                                 <div class="col-sm-4">
                                     <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
                                         <img src="assets/images/style-guide.jpg">
+                                        <label class="custom-chkbox">
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                          </label>
                                     </div>
-                                    <label class="custom-chkbox">
-                                        <input type="checkbox">
-                                        <span class="checkmark"></span>
-                                      </label>
+                                   <div class="align-center">
+                                      <button class="btn button-save mr-7 mt-20">Preview</button>
+                                    </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
                                         <img src="assets/images/style-guide.jpg">
+                                        <label class="custom-chkbox">
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                          </label>
                                     </div>
-                                    <label class="custom-chkbox">
-                                        <input type="checkbox">
-                                        <span class="checkmark"></span>
-                                      </label>
+                                   <div class="align-center">
+                                      <button class="btn button-save mr-7 mt-20">Preview</button>
+                                    </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
                                         <img src="assets/images/style-guide.jpg">
+                                        <label class="custom-chkbox">
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                          </label>
                                     </div>
-                                    <label class="custom-chkbox">
-                                        <input type="checkbox">
-                                        <span class="checkmark"></span>
-                                      </label>
-                                </div> 
+                                   <div class="align-center">
+                                      <button class="btn button-save mr-7 mt-20">Preview</button>
+                                    </div>
+                                </div>
                             </div>
                             <div class="row section-spacing">
                                 <div class="col-sm-12">
@@ -122,29 +139,38 @@
                                 <div class="col-sm-4">
                                     <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
                                         <img src="assets/images/style-guide.jpg">
+                                        <label class="custom-chkbox">
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                          </label>
                                     </div>
-                                    <label class="custom-chkbox">
-                                        <input type="checkbox">
-                                        <span class="checkmark"></span>
-                                      </label>
+                                   <div class="align-center">
+                                      <button class="btn button-save mr-7 mt-20">Preview</button>
+                                    </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
                                         <img src="assets/images/style-guide.jpg">
+                                        <label class="custom-chkbox">
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                          </label>
                                     </div>
-                                    <label class="custom-chkbox">
-                                        <input type="checkbox">
-                                        <span class="checkmark"></span>
-                                      </label>
+                                   <div class="align-center">
+                                      <button class="btn button-save mr-7 mt-20">Preview</button>
+                                    </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
                                         <img src="assets/images/style-guide.jpg">
+                                        <label class="custom-chkbox">
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                          </label>
                                     </div>
-                                    <label class="custom-chkbox">
-                                        <input type="checkbox">
-                                        <span class="checkmark"></span>
-                                      </label>
+                                   <div class="align-center">
+                                      <button class="btn button-save mr-7 mt-20">Preview</button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row section-spacing">
