--- a/src/app/work-space/work-space-initial-requirement/work-space-initial-requirement.component.html
+++ b/src/app/work-space/work-space-initial-requirement/work-space-initial-requirement.component.html
@@ -69,13 +69,13 @@
                                 <label class="control-label" for="cname">Reference Sites<sup>*</sup></label>
                             </div>   
                             <div class="col-sm-3">
-                                <input type="text" name="uploadFile" class="txt-outline bg-white w-100" placeholder="URL 1">
+                                <input type="text" class="txt-outline bg-white w-100" placeholder="URL 1">
                             </div>  
                             <div class="col-sm-3">
-                                <input type="text" name="uploadFile" class="txt-outline bg-white w-100" placeholder="URL 1">
+                                <input type="text" class="txt-outline bg-white w-100" placeholder="URL 2">
                             </div> 
                             <div class="col-sm-3">
-                                <input type="text" name="uploadFile" class="txt-outline bg-white w-100" placeholder="URL 1">
+                                <input type="text" class="txt-outline bg-white w-100" placeholder="URL 3">
                             </div> 
                         </div>
                          <div *ngIf="commonService.getRole() =='idea-owner'" class="row">  
