--- a/src/app/work-space/work-space-list/work-space-list.component.html
+++ b/src/app/work-space/work-space-list/work-space-list.component.html
@@ -2,7 +2,7 @@
     <ul>
         <li *ngIf="commonService.getRole() =='idea-owner'" >
             <a  (click)="createWorkspace()"  style="cursor: pointer;" [class.active]="isCreateWorkSpace == 'create'"> 
-                <img src="assets/images/menu-icons/main-menu1.png">
+                <img src="assets/images/workspace-home.svg">
                 
             </a>
             
