--- a/src/app/work-space/work-space-team/work-space-team.component.html
+++ b/src/app/work-space/work-space-team/work-space-team.component.html
@@ -50,6 +50,26 @@
                   </div>
                 </div>
               </div>
+
+              <div>
+                <div class="bg-white border-gray mt-10 radius-all-3 p-all-10">
+                  <div class="row">
+  
+                    <div class="col-sm-4">
+                      <div class="font-semibold pl-8">name</div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div>name1</div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div>name2</div>
+                    </div>
+                    <div class="col-sm-2">
+                      <div>name3</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
     </div>
