--- a/src/app/work-space/work-space-team/work-space-team.component.html
+++ b/src/app/work-space/work-space-team/work-space-team.component.html
@@ -16,7 +16,7 @@
         <div class="col-sm-12">
           <div class=" p-all-10">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <label class="ft-18">Resource</label>
                 </div>
                 <div class="col-sm-4">
@@ -28,6 +28,9 @@
                 <div class="col-sm-2">
                   <label class="ft-18">Role</label>
                 </div>
+                <div class="col-sm-1">
+                  <label class="ft-18"></label>
+                </div>
   
               </div>
             </div>
@@ -35,7 +38,7 @@
                 <div class="bg-white border-gray mt-10 radius-all-3 p-all-10">
                   <div class="row">
   
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                       <div class="font-semibold pl-8">{{teamListObj.userName}}</div>
                     </div>
                     <div class="col-sm-4">
@@ -47,6 +50,9 @@
                     <div class="col-sm-2">
                       <div>{{teamListObj.roleCode}}</div>
                     </div>
+                    <div class="col-sm-1">
+                      <div><img src="assets/images/add-small.png"></div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -55,7 +61,7 @@
                 <div class="bg-white border-gray mt-10 radius-all-3 p-all-10">
                   <div class="row">
   
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                       <div class="font-semibold pl-8">name</div>
                     </div>
                     <div class="col-sm-4">
@@ -66,6 +72,9 @@
                     </div>
                     <div class="col-sm-2">
                       <div>name3</div>
+                    </div>
+                    <div class="col-sm-1">
+                      <div>name4</div>
                     </div>
                   </div>
                 </div>
